Eliminación de algunos atributos requeridos en esquemas
